2006-05-16  Eli Zaretskii  <eliz@gnu.org>

	* international/mule.el (auto-coding-alist): Add .lha to files
	read with no-conversion.

	* files.el (auto-mode-alist): Add .lha files to archive file
	extensions. 

	* arc-mode.el (archive-arc-summarize, archive-lzh-summarize):
	Convert csize to integer when computing offsets within the
	compressed archive file.

2006-05-16  Kim F. Storm  <storm@cua.dk>

	* subr.el (add-to-history): Add KEEP-ALL arg and align functionality
	with read-from-minibuffer.

2006-05-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* emacs-lisp/bytecomp.el (byte-compile-warnings-safe-p): New function.
	(byte-compile-warnings): Fix safe-local-variable property.

2006-05-16  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el (allout-show-bodies, allout-old-style-prefixes)
	(allout-stylish-prefixes, allout-numbered-bullet)
	(allout-file-xref-bullet, allout-use-hanging-indents): Use simple
	predicates to qualify `safe-local-variable' property, when
	available, else use equivalent lambda.
	(allout-current-topic-collapsed-p): Do the right thing regarding
	trailing blank lines.

2006-05-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-start): Only create a directory if needed.
	(server-edit, server-unload-hook): server-start => server-mode.
	(kill-emacs-hook): Cleanup upon exit.

2006-05-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* hexl.el (hexlify-buffer): Encode process arguments manually.

2006-05-16  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-tooltip-tips): Add missing argument to
	call to gdb-tooltip-print.

2006-05-15  Romain Francoise  <romain@orebokech.com>

	* dired-x.el (dired-guess-shell-gnutar): On GNU and GNU/Linux
	systems, default to "tar" since those systems probably have GNU tar.

2006-05-14  Lars Hansen  <larsh@soem.dk>

	* desktop.el (desktop-missing-file-warning): Fix docstring.
	(desktop-restore-file-buffer): Correct question asked on missing file.

2006-05-14  Kim F. Storm  <storm@cua.dk>